  ``module_info_from_dotted_name`` if its ``ignore_nonsource``
  parameter is ``True``.  The default is ``True``.  To revert to the
  older behavior where .pyc files were honored, pass
  ``ignore_nonsource=False``.

* Pass along ``exclude_filter`` (and the new ``ignore_nonsource``
  flag) to ModuleInfo constructor when it calls itself recursively.

0.11 (2008-09-24)
=================

Feature changes
---------------

* Added MULTIPLE_NOBASE option for directive store. This is like MULTIPLE
  but doesn't inherit information from the base class.

0.10 (2008-06-06)
=================

Feature changes
---------------

* Add a ``validateClass`` validate function for directives.

* Moved ``FakeModule`` and ``fake_import`` into a ``martian.testing``
  module so that they can be reused by external packages.

* Introduce new tutorial text as README.txt. The text previously in
  ``README.txt`` was rather too detailed for a tutorial, so has been
  moved into ``core.txt``.

* Introduce a ``GrokkerRegistry`` class that is a ``ModuleGrokker``
  with a ``MetaMultiGrokker`` in it. This is the convenient thing to
  instantiate to start working with Grok and is demonstrated in the
  tutorial.

* Introduced three new martian-specific directives:
  ``martian.component``, ``martian.directive`` and
  ``martian.priority``. These replace the ``component_class``,
  ``directives`` and ``priority`` class-level attributes. This way
  Grokkers look the same as what they grok. This breaks backwards
  compatibility again, but it's an easy replace operation. Note that
  ``martian.directive`` takes the directive itself as an argument, and
  then optionally the same arguments as the ``bind`` method of
  directives (``name``, ``default`` and ``get_default``). It may be
  used multiple times. Note that ``martian.baseclass`` was already a
  Martian-specific directive and this has been unchanged.

* For symmetry, add an ``execute`` method to ``InstanceGrokker``.

0.9.7 (2008-05-29)
==================
